feat: upload swaggerr
